<resources>
    <string name="app_name">Management of appointments</string>
    <string name="settings_style">Style</string>
    <string name="Light">Light</string>
    <string name="Dark">Dark</string>
    <string name="Green">Green</string>
    <string name="Purple">Purple</string>
    <string name="settings_notification">Notification</string>
    <string name="settings_1w">1 week before</string>
    <string name="settings_2w">2 week before</string>
    <string name="settings_3w">3 week before</string>
    <string name="modify">modify</string>
    <string name="addRdv">Add an appointment</string>
    <string name="editDesc">Enter Description</string>
    <string name="editPhone">Enter a phone number</string>
    <string name="editTime">Select Time</string>
    <string name="Detailsrdv">Details of the appointment </string>
    <string name="btnAccueil">List of meetings</string>
    <string name="NotificationMessage">is coming in a few weeks</string>
    <string name="Modify">Modify</string>
    <string name="Empty">No appointment</string>
    <string name="editTitle">Title</string>
    <string name="editDate">Enter Date</string>
    <string name="editAddress">Address</string>
    <string name="Submit">Submit</string>
    <string name="Cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="settings_lang">Language</string>
    <string name="settings_en">English</string>
    <string name="settings_fr">French</string>
    <string name="call">Call</string>
    <string name="map">Map</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
</resources>