<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RadioGroup
            android:id="@+id/rgLanguage"
            android:layout_width="200dp"
            android:layout_height="96dp"
            android:layout_marginTop="50dp"
            app:layout_constraintBottom_toTopOf="@+id/rgStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvLanguagerRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_lang" />

            <RadioButton
                android:id="@+id/rbEnglish"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:onClick="onLanguageRadioButtonClick"
                android:text="@string/settings_en" />

            <RadioButton
                android:id="@+id/rbFrench"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:onClick="onLanguageRadioButtonClick"
                android:text="@string/settings_fr" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/rgStyle"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgLanguage">

            <TextView
                android:id="@+id/tvStyleRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_style" />

            <RadioButton
                android:id="@+id/rbLight"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:onClick="onStyleRadioButtonClick"
                android:text="@string/Light" />

            <RadioButton
                android:id="@+id/rbDark"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:onClick="onStyleRadioButtonClick"
                android:text="@string/Dark" />

            <RadioButton
                android:id="@+id/rbGreen"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:onClick="onStyleRadioButtonClick"
                android:text="@string/Green" />

            <RadioButton
                android:id="@+id/rbPurple"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:onClick="onStyleRadioButtonClick"
                android:text="@string/Purple" />
        </RadioGroup>


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="200dp"
            android:layout_height="193dp"
            app:layout_constraintBottom_toTopOf="@+id/Back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgStyle">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_notification" />

            <RadioButton
                android:id="@+id/rbOneWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onReminderRadioButtonClick"
                android:text="@string/settings_1w" />

            <RadioButton
                android:id="@+id/rbTwoWeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onReminderRadioButtonClick"
                android:text="@string/settings_2w" />

            <RadioButton
                android:id="@+id/rbThreeWeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onReminderRadioButtonClick"
                android:text="@string/settings_3w" />
        </RadioGroup>

        <Button
            android:id="@+id/Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:onClick="onBackClick"
            android:text="@string/btnAccueil"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>